<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.android.fictionalbusiness.MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/img2"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:textAppearance="?android:textAppearanceLarge"
                android:padding="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_call_black_24dp"
                    android:paddingLeft="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email_black_24dp"
                    android:paddingLeft="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_on_black_24dp"
                    android:paddingLeft="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="?android:textAppearanceLarge"
                android:paddingTop="8dp"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sponsor"
                android:textAppearance="?android:textAppearanceLarge"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@drawable/oracle"/>

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@drawable/microsoft" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@drawable/amazon" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ibm" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@drawable/google" />

                </LinearLayout>

            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
